# skills-drills

./: .gitignore  main.py  pyproject.toml
python/: data_cleaning_preparation_Answers.ipynb  data_cleaning_preparation_Questions.ipynb  data_reshaping_transformations_Answers.ipynb  data_reshaping_transformations_Questions.ipynb  list_comprehension_drills_Answers.ipynb  list_comprehension_drills_Questions.ipynb  machine_learning_workflow_Answers.ipynb  machine_learning_workflow_Questions.ipynb  my_random_helpers_Answers.ipynb  plotting_visualization_challenges_Answers.ipynb  plotting_visualization_challenges_Questions.ipynb  python_data_science_general_Answers.ipynb  python_data_science_general_Questions.ipynb  python_fundamentals_practice_Answers.ipynb  python_fundamentals_practice_Questions.ipynb  statistical_analysis_practice_Answers.ipynb  statistical_analysis_practice_Questions.ipynb
sql/: sql_drills_Answers.ipynb  sql_drills_Questions.ipynb
